# templatepy

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yaml  docs.yaml
docs/: gen_ref_pages.py  index.md
docs/includes/: abbreviations.md
docs/playbook/: github-actions.md  github-templates.md  mkdocs.md  pre-commit.md  pyproject-toml.md  ruff.md  testing.md  uv.md  vscode.md
includes/abbreviations/: index.html
playbook/github-actions/: index.html
playbook/github-templates/: index.html
playbook/mkdocs/: index.html
playbook/pre-commit/: index.html
playbook/pyproject-toml/: index.html
playbook/ruff/: index.html
playbook/testing/: index.html
playbook/uv/: index.html
playbook/vscode/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/cli/: index.html
reference/cli/hello/: index.html
reference/demo/: index.html
reference/demo/dataclass_demo/: index.html
reference/demo/pydantic_demo/: index.html
reference/demo/rich_demo/: index.html
search/: search_index.json
templatepy/: __init__.py
templatepy/cli/: __init__.py  hello.py
templatepy/demo/: __init__.py  dataclass_demo.py  pydantic_demo.py  rich_demo.py
templatepy/hello/: __init__.py
tests/cli/: test_hello.py
tests/demo/: test_dataclass_demo.py  test_pydantic_demo.py  test_rich_demo.py
