[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-python"
dynamic = ['version']
authors = [{ name = "Victoria Oberascher" }, { name = "Kevin Serrano" }]
description = "Template for Python projects"
readme = "README.md"
requires-python = ">=3.9" # adjust as needed
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

# Required dependencies
dependencies = [
  "rich",
  "click",
]

[project.scripts]
templatepy = "templatepy.cli:cli"

[project.optional-dependencies]
numba = ["numba"]

[dependency-groups]
# dev dependencies are not part of the package, but handy for development
# they get automatically installed when using `uv sync`
dev = [
  "ipykernel",
  "ipywidgets",
  "nbformat",
  "matplotlib",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "ruff",
  "isort",
  "mkdocs-material[git]>=9.6.9",
  "mkdocstrings[python]>=0.29.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-section-index>=0.3.9",
  "mkdocs-minify-plugin>=0.8.0",
  "griffe-fieldz>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/SEA-AI/templatepy"
Issues = "https://github.com/SEA-AI/templatepy/issues"

[tool.setuptools.dynamic]
version = { attr = "templatepy.__version__" }

# Tools settings
[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = ["templatepy*"]

# Pytest settings
[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "--import-mode=importlib"
addopts = "-q --cov -s"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

# Coverage settings
[tool.coverage.report]
include = ["templatepy/*"]
exclude_lines = [
  "if TYPE_CHECKING",
]

# Pylint settings
[tool.pylint]
ignored-modules = [
  "cv2",  # doesn't ship with proper type stubs by default
]
jobs = 0
ignore = [
  "tests",
  "docs",
  "build",
  ".venv"
]
ignore-paths = [
  ".*tests.*.py$",
]
max-args = 10
max-line-length = 120  # allow for more verbose docstrings
disable = [
  "too-many-positional-arguments",  # requires using "*" in function signatures
  "import-outside-toplevel",  # lazy loading
  "missing-function-docstring",  # handled by ruff
  "logging-fstring-interpolation",
  "too-few-public-methods",
  "broad-exception-caught",
]
